Fixed Jumin becoming too small when shrunk

--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ p {
 img {
     width: 25%;
     height: 25%;
+    min-width: 500px;
+    min-height: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
